src/snapshots/kk__tests__compiler__typecheck__cannot_invoke_non_function_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x = 2
let f = 'hi'.x()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/cannot_invoke_non_function_1.kk:2:14
  │
2 │ let f = 'hi'.x()
  │              ^ Cannot call a non-function
  │
  = The type of this expression is not function, so you cannot call it.
