src/snapshots/kk__tests__compiler__typecheck__case_exhaustiveness_array_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo =
  \[] => true
  \[_, ...[]] => false

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_array_1.kk:2:3
  │
2 │ ╭   \[] => true
3 │ │   \[_, ...[]] => false
  │ ╰──────────────────────^ Non-exhaustive cases
  │
  = Missing case(s):

      \[_, ...[_, ..._]] => ...
