src/snapshots/kk__tests__compiler__typecheck__case_exhaustiveness_boolean_2.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let and =
  \(true, true) => true
  \(false, true) => false

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_boolean_2.kk:2:3
  │
2 │ ╭   \(true, true) => true
3 │ │   \(false, true) => false
  │ ╰─────────────────────────^ Non-exhaustive cases
  │
  = Missing case(s):

      \(true, false) => ...
      \(false, false) => ...
