src/snapshots/kk__tests__compiler__typecheck__case_exhaustiveness_enum_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum List<T> =
  #nil
  #cons({current: T, next: List<T = T>})

let bomb =
  \#nil => true
  \#cons({current = _, next = #nil}) => true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_enum_1.kk:6:3
  │
6 │ ╭   \#nil => true
7 │ │   \#cons({current = _, next = #nil}) => true
  │ ╰────────────────────────────────────────────^ Non-exhaustive cases
  │
  = Missing case(s):

      \#cons({ current = _, next = #cons(_) }) => ...
