src/snapshots/kk__tests__compiler__typecheck__case_exhaustiveness_number_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let isZero =
  \0 => true
  \1 => false
  \_ => false

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
